# flux-engine

./: .gitignore  Cargo.toml  README.md
crates/engine-ecs/: Cargo.toml
crates/engine-ecs/src/: lib.rs
crates/engine-macros/: Cargo.toml
crates/engine-macros/src/: lib.rs
crates/engine-macros/tests/: macro_tests.rs
crates/engine-memory/: Cargo.toml
crates/engine-memory/src/: region.rs
crates/flux_ecs/: Cargo.toml
crates/flux_ecs/src/: archetype.rs  archetype_graph.rs  archetypes.rs  component.rs  entity.rs  lib.rs  module.rs  plugin.rs  query.rs  resource.rs  world.rs
crates/flux_ecs/src/commands/: mod.rs
crates/flux_ecs/src/schedule/: mod.rs
crates/flux_ecs/src/system/: function_system.rs  mod.rs  parameter.rs  systems.rs
crates/flux_macros/: Cargo.toml
crates/flux_memory/macros/: Cargo.toml
crates/flux_memory/macros/tests/: macro_tests.rs
crates/flux_memory/src/: lib.rs  region.rs  tracking_allocator.rs
crates/flux_renderer/: Cargo.toml
crates/flux_renderer/shaders/: compile.bat  shader.frag  shader.vert
crates/flux_renderer/src/: buffers.rs  command_buffer.rs  command_pool.rs  depth_buffers.rs  descriptors.rs  device.rs  image.rs  instance.rs  lib.rs  pipeline.rs  surface.rs  swapchain.rs
src/main/: Cargo.toml
src/main/src/: main.rs
