[package]
name = "flux-engine-macros"
version = "0.1.0"
edition = "2021"

[lib]
proc-macro = true

[dependencies]
syn = { workspace = true, features = ["full", "extra-traits", "visit-mut"] }
quote = { workspace = true }
proc-macro2 = { workspace = true }
flux-engine-memory = { path = "../engine-memory" }
